fix: spacing

--- a/packages/raystack/v1/components/filter-chip/filter-chip.module.css
+++ b/packages/raystack/v1/components/filter-chip/filter-chip.module.css
@@ -92,8 +92,11 @@
   display: flex;
   align-items: center;
   height: 100%;
-  padding: var(--rs-space-1) var(--rs-space-3);
+  padding-left: var(--rs-space-3);
+  padding-right: var(--rs-space-3);
   margin: 0;
+  border-top-right-radius: var(--rs-radius-2);
+  border-bottom-right-radius: var(--rs-radius-2);
 }
 
 .removeIconContainer:hover {
